[package]
name = "rust-https-server"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A sophisticated, production-ready HTTP server implementation in Rust"
license = "MIT"
repository = "https://github.com/1cbyc/rust-https-server.git"
keywords = ["http", "server", "web", "api", "async"]
categories = ["web-programming", "asynchronous"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
http = "1.0"
bytes = "1.5"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }
config = "0.14"
mime = "0.3"
mime_guess = "2.0"
flate2 = "1.0"
regex = "1.10"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
dashmap = "5.5"
parking_lot = "0.12"
crossbeam-channel = "0.5"
rayon = "1.8"
num_cpus = "1.16"
urlencoding = "2.1"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"
criterion = "0.5"
mockall = "0.12"
proptest = "1.4"

[[bench]]
name = "server_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
debug = true

